bundle/manifests/pf-status-relay-operator-operator-allow-egress-to-api-server_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pf-status-relay-operator-operator-allow-egress-to-api-server
spec:
  egress:
  - ports:
    - port: 6443
      protocol: TCP
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Egress
