bundle/manifests/pf-status-relay-operator-operator-allow-from-api-server-to-webhook_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pf-status-relay-operator-operator-allow-from-api-server-to-webhook
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Ingress
