bundle/manifests/pf-status-relay-operator-operator-allow-to-dns_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pf-status-relay-operator-operator-allow-to-dns
spec:
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    - port: 5353
      protocol: TCP
    - port: 5353
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Egress
